# SCPA

./: .gitignore  README.md
code/: CMakeLists.txt  main.c  main.cu
code/kernel/: kernel.cu  kernel.cuh
code/lib/mmio/: mmio.c
code/logic/CPU/: logicCPU.c  logicCPU.h
code/logic/GPU/: logicGPU.cu  logicGPU.cuh
code/utility/: util.c  util.h
code/utility/GPU/: utilGPU.cpp  utilGPU.h
code/utility/matrix/CSR/: CSR.c  CSR.h
code/utility/matrix/ELL/: ELL.c  ELL.h
data/csv/: cpu_csr.csv  cpu_ell.csv  gpu_csr.csv  gpu_ell.csv
data/matrix/: download_matrix.sh
